Add html meta description

--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,22 @@
 <head>
-    <title>adam-theory-cryptocurrency</title>
+    <title>Adam Theory Cryptocurrency</title>
+    <meta name="description"
+          content="Adam Theory implementation for cryptocurrency.">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Unica+One">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44235961-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-44235961-2');
+    </script>
 </head>
 
 <body>
