Edit website metadata

--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-    <title>Adam Theory Cryptocurrency</title>
+    <title>Adam Theory of Cryptocurrency</title>
     <meta name="description"
-          content="Adam Theory implementation for cryptocurrency.">
+          content="Adam Theory of cryptocurrency.">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Unica+One">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
